# json-schema-checker

./: .bumpversion.cfg  .coverage  .travis.yml  .travis.yml   Pipfile  README.md  setup.cfg  setup.py  tox.ini
src/json_schema_checker/: json_schema_checker.py
src/perfect_jsonschema/: perfect_jsonschema.py
tests/: test_integration.py  test_perfect_jsonschema.py  test_schema.py  test_schema_checker.py
