[metadata]
name = perfect-jsonschema
version = 2018.01.31
description = Strictly checks that a json schema is valid
long_description = file: README.md
author = manycoding
url = https://github.com/manycoding/perfect-jsonschema
license = MIT
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
  Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
package_dir = 
	=src
packages = find:
setup_requires = setuptools_scm
install_requires = 
	jsonschema[format]>=3.0.0b3
zip_safe = True

[options.packages.find]
where = src

